# DevOps-Core-S26

./: .gitignore  README.md
.github/workflows/: ansible-deploy.yml  app_python.yml  go-docker.yml  go-snyk.yml  python-ci.yml  python-docker.yml  python-snyk.yml
ansible/: .ansible-lint  .gitignore  .yamllint.yml  ansible.cfg  requirements-ci.txt
ansible/docs/: LAB05.md  LAB06.md
ansible/group_vars/: all.yml
ansible/inventory/: hosts.ini
ansible/playbooks/: deploy-monitoring.yml  deploy.yml  provision.yml  site.yml
app_go/: .dockerignore  .gitignore  Dockerfile  README.md  build.sh  go.mod  go.sum  main.go  main_test.go
app_go/docs/: GO.md  LAB01.md  LAB02.md
app_python/: .dockerignore  .flake8  .gitattributes  .gitignore  Dockerfile  README.md  app.py  gunicorn.conf.py  pyproject.toml
app_python/docs/: LAB01.md  LAB02.md  LAB03.md  LAB08.md
app_python/src/: flask_instance.py  logging_utils.py  main.py  metrics.py  router.py
app_python/tests/: conftest.py  test_endpoints.py  test_logging_utils.py  test_metrics.py  test_unit_helpers.py
docker/: provision_vm.sh
docs/: LAB04.md
k8s/: ARGOCD.md  CONFIGMAPS.md  HELM.md  README.md  ROLLOUTS.md  SECRETS.md  deployment.yml  service.yml
k8s/argocd/: application-dev.yaml  application-prod.yaml  application.yaml
k8s/docs/: LAB09.md  (+5 more)
monitoring/: .env.example  docker-compose.yml
pulumi/: Pulumi.dev.yaml.example  Pulumi.yaml  __main__.py  requirements.txt
terraform/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
vagrant/: .gitignore  README.md  Vagrantfile
(+56 files in other folders)
