[tool.poetry]
name = "devops-info-service"
version = "0.1.0"
description = ""
authors = ["LocalT0aster"]
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.13"
flask = ">=3.1.2,<4.0.0"
requests = ">=2.32.5,<3.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "pep8-naming (>=0.15.1,<0.16.0)"
]
