[project]
name = "devops-info-service"
version = "1.10.0"
description = ""
authors = [
    {name = "LocalT0aster",email = "90502400+LocalT0aster@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask (>=3.1.3,<4.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "gunicorn (>=25.1.0,<26.0.0)",
    "prometheus-client (==0.23.1)"
]

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "pep8-naming (>=0.15.1,<0.16.0)"
]

[tool.poetry]
packages = [{ include = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
